tests/codegen/errors/reader/define-type-asm/atom.reader.error.reader.typed.define.missing.variable/reader-typed-define-missing-variable.mon
;; TEST-ID: tests.codegen.reader-error.reader-typed-define-missing-variable
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/define-type-asm
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected variable name in typed define
;; TEST-ATOM: atom.reader.error.reader.typed.define.missing.variable
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.typed.define.missing.variable
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected variable name in typed define
;; TEST-READER-PATH: reader.c:3753 parser.define
;; TEST-CODEGEN-PATH: diagnostic.parser.define
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3753 Expected variable name in typed define
;; TEST-USES-ATOM: atom.reader.error.reader.typed.define.missing.variable
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.define
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/define-type-asm/atom.reader.error.reader.typed.define.missing.variable
;; TEST-MENU-PATH: codegen/errors/reader/define-type-asm/atom.reader.error.reader.typed.define.missing.variable
;; TEST-ATOM-LEAF: atom.reader.error.reader.typed.define.missing.variable
;; TEST-CLI-TARGET: codegen errors reader define-type-asm

(module Main)
(define [: Int] 1)
